--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --silent"
+    "test": "jest --silent",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
@@ -29,6 +30,7 @@
     "@faker-js/faker": "^8.4.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/micro-cors": "^0.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
